codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__popups_and_settings__remote_marketplace_server_owned_actions.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Plugins
  Repo Marketplace.
  Installed 0 of 1 Repo Marketplace plugins.

  All Plugins  Installed (0)  OpenAI Curated  Workspace  [Repo Marketplace]  Add Marketplace

  Type to search plugins
› [-] Debug Plugin  Available   Press Enter to install or view plugin details.

  ctrl + u upgrade · ctrl + r remove · space toggle · ←/→ tabs · enter details · esc close
